package sys;
import "sys/Common.proto";

option java_package = "nirvana.hall.protocol.sys";

option java_outer_classname = "PersonProto";

//定义捺印人输出字段
message PersonInfo {
    optional string personid = 1;
    optional string idcardno = 2;               //身份证号
    optional string name = 3;                   //姓名
    optional string usedname = 4;               //曾用名
    optional string aliasname = 5;              //别名
    optional string sexCode = 6;                //性别字典
    optional string nationCode = 7;             //民族字典
    optional string nativeplaceCode = 8;        //国籍字典
    optional string birthdayst = 9;             //出身日期
    optional string politicsCode = 10;          //政治面貌字典
    optional string cultureCode = 11;           //文化程度字典
    optional string faithCode = 12;             //宗教信仰字典
    optional string ifmarryCode = 13;           //婚姻状况字典
    optional string door = 14;                  //户籍地行政区划
    optional string doorStreet = 15;            //户籍地乡镇/街道/社区
    optional string doordetail = 16;            //户籍地祥址
    optional string address = 17;               //现住址行政区划
    optional string addressStreet = 18;         //现住址乡镇/街道/社区
    optional string addressdetail = 19;         //现住地祥址
    optional string specialidentityCode = 20;   //特殊身份字典
    optional string specialgroupCode = 21;      //特殊人群字典
    optional string sourceincomeCode = 22;      //经济来源字典
    optional string haveemployment = 23;        //是否有固定职业
    optional string jobCode = 24;               //职业字典
    optional string headship = 25;              //职务
    optional string employunit = 26;            //工作单位
    optional string employaddress = 27;         //工作单位祥址
    optional string gatherCategory = 28;        //采集类别
    optional string personCategory = 29;        //人员类型
    optional string gatherdepartcode = 30;      //人员类型
    optional string gatheruserid = 31;          //人员类型
    optional string remark = 32;                //备注
}

message PersonResponse {
    extend BaseResponse {
        optional PersonResponse cmd = 102;
    }
    repeated PersonInfo personInfo = 1;
}
